# pub-sub-kiss-icp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: eventhubs-config.yaml  googlepubsub-config.yaml  iggy-config.yaml  kafka-config.yaml  mock-config.yaml  pulsar-config.yaml  streamnative-config.yaml
pub_sub_kiss_icp/: __init__.py  config.py  main.py  pipeline.py  processor.py  serialization.py
pub_sub_kiss_icp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pub_sub_kiss_icp/adapters/: __init__.py  base.py  eventhubs.py  googlepubsub.py  iggy.py  kafka.py  mock.py  pulsar.py
tests/: test_pipeline.py  test_processor.py  test_serialization.py
